<resources>
    <string name="app_name">Wish</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_Friends">Edit Friends</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username_hint">Username</string>
    <string name="passwordField_hint">Password</string>
    <string name="loginBtn_label">LOGIN</string>
    <string name="signUpText">SIGN UP</string>
    <string name="emailField_hint">Email</string>
    <string name="signBtn_label">SIGN UP</string>
    <string name="password_sing">Password</string>
    <string name="subTitle_text">Let your dreams fly…</string>
    <string name="TitleApp_name">Wish</string>
    <string name="cancelBttn">CANCEL</string>
    <string name="loging_message">Loading...</string>
    <string name="empty_inbox_label">No hay mensajes que mostrar</string>
    <string name="empty_friends_label">añade amigos para empezar</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_message">Error al cargar los usuarios...</string>
    <string name="user_added_toast">User added to the list successfully</string>
    <string name="user_deleted_toast">User removed from the list successfully</string>
    <string name="repositorio">Ir al repositorio</string>
    <string name="mensaje_repo">¿Quieres visitar el repositorio en GitHub?</string>
    <string name="general_error">Ocurrió algún error</string>
    <string name="dialog_sizeVideo_Notice">El video debe ser inferior a 10Mb</string>
    <string name="video_size_warning">El video seleccionado es muy grande. Seleccione otro video </string>
    <string name="error">Error</string>
    <string name="aviso_limite_video">El video debe ser inferior a 10Mb</string>
    <string name="error_storage">Error Storage</string>
    <string name="error_almacenamiento">Error con el almacenamiento externo</string>
    <string name="problema_video">Hay algún problema al obtener el video</string>
    <string name="aceptar">Aceptar</string>

    <!-- camera_choices -->
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choice Picture</item>
        <item>Choice Video </item>
    </string-array>
    <string name="title_activity_view_image">Wick App</string>

</resources>