<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.labs.josemanuel.yeep.MainActivity">
    <item
        android:id="@+id/action_send"
        android:orderInCategory="100"
        android:title="@string/loging_message"
        android:icon="@drawable/ic_action_send_now"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_edit_Friends"
        android:orderInCategory="200"
        android:title="@string/action_edit_Friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item android:id="@+id/action_camera"
        android:icon="@drawable/ic_menu_camera"
        android:title="action bar camera"
        app:showAsAction = "always"
        />
    <item
        android:id="@+id/action_repositorio"
        android:orderInCategory="300"
        android:title="@string/repositorio"
        app:showAsAction="never" />

</menu>