<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wish_log"
    tools:context="com.labs.josemanuel.yeep.LoginActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleApp_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
        android:textSize="80sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle_text"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/login_horizontal_margin"
        android:paddingRight="@dimen/login_horizontal_margin"
        android:paddingTop="45dp"
        android:paddingBottom="@dimen/login_horizontal_margin"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/subTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/nube_sign">

        <EditText
            android:id="@+id/userFieldSign"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginBtn"
            android:layout_alignLeft="@+id/imageView"
            android:textColorHint="@color/light_gray"
            android:layout_alignStart="@+id/imageView"
            android:focusable="true"
            android:hint="@string/username_hint"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginBtn"
            android:textColorHint="@color/light_gray"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:hint="@string/passwordField_hint"
            android:inputType="textPassword"
            android:password="false"
            android:theme="@style/AppTheme"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

    <TextView
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:textSize="18sp"
        android:textColor="#cab9b9"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn_label"
        android:background="@drawable/button_custom"
        android:textColor="@color/text_color"
        android:onClick="loginUsuario"
        style="@style/ImageButtonAppTheme"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />


</RelativeLayout>
